Team: Layout bug fixed (nth of type needed to be updated because overlays added DOM)

--- a/src/sass/flx/_who-we-are.scss
+++ b/src/sass/flx/_who-we-are.scss
@@ -44,7 +44,7 @@
             padding-bottom: 20rem;
         }
 
-        .team-member:nth-of-type(5) {
+        .team-member:nth-of-type(9) {
             padding-top: 20rem;
         }
     }
